Update po files for monochrome build

--- a/translations/castle_greek_gift.tex/cs.po
+++ b/translations/castle_greek_gift.tex/cs.po
@@ -43,10 +43,10 @@ msgstr ""
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Budovy ve Městě:} \\svgunit{bronze} Obydlí, Citadela\n"
+"\\textbf{Budovy ve Městě:} \\bronze\\ Obydlí, Citadela\n"
 "\n"
 
 #. type: multicols*
@@ -240,7 +240,7 @@ msgstr ""
 #| msgid ""
 #| "\\textbf{Starting Units:}\n"
 #| "\\begin{itemize}\n"
-#| "  \\item 2 × A Pack \\svgunit{bronze} Units with the lowest Recruitment cost\n"
+#| "  \\item 2 × A Pack \\bronze\\ Units with the lowest Recruitment cost\n"
 #| "\\end{itemize}\n"
 #| "\n"
 msgid ""
@@ -252,7 +252,7 @@ msgid ""
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Tlupu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item 2 × Tlupu \\bronze\\ Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -846,7 +846,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item \\textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \\svgunit{bronze} neutral Zombies and Skeletons.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \\bronze\\ neutral Zombies and Skeletons.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Play ``Cloak of the Undead King IV'' and ``Cloak of the Undead King VI'' onto the packs of Zombies and Skeletons, respectively.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Remove the AI Might and Magic Deck from the game, the undead fight on their own.}\n"
 "\\end{itemize}\n"
