--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -576,7 +576,7 @@ msgid ""
 "  \\item Your Hero's maximum Level is 6.\n"
 "  \\item All buildings are unavailable, building is not possible.\n"
 "  \\item All neutral enemies fight using the Neutral Enemy Deck.\n"
-"  \\item Each time you visit a Trading Post, draw the top Cards from the \\svgunit{bronze} bronze, \\svgunit{silver} silver, and \\svgunit{golden} golden neutral enemy Decks.\n"
+"  \\item Each time you visit a Trading Post, draw the top Cards from the \\bronze\\ bronze, \\silver\\ silver, and \\golden\\ golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
 "  \\item The Grail may be sold at a trading post for 30 \\svgunit{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
@@ -590,7 +590,7 @@ msgstr ""
 "  \\item Maksymalny Poziom twojego Bohatera~to~6.\n"
 "  \\item Wszystkie budynki są niedostępne, budowanie jest niemożliwe.\n"
 "  \\item Wszystkie Neutralne Jednostki walczą używając Talii Neutralnych Wrogów.\n"
-"  \\item Za każdym razem gdy odwiedzasz Punkt Handlowy, dobierz wierzchnie Karty z talii Neutralnych Jednostek \\svgunit{bronze} brązowych, \\svgunit{silver} srebrnych i \\svgunit{golden} złotych.\n"
+"  \\item Za każdym razem gdy odwiedzasz Punkt Handlowy, dobierz wierzchnie Karty z talii Neutralnych Jednostek \\bronze\\ brązowych, \\silver\\ srebrnych i \\golden\\ złotych.\n"
 "    Możesz zrekrutować dowolną liczbę z nich, płacąc ich koszt.\n"
 "    Wtasuj wszystkie niezrekrutowane Jednostki z powrotem do ich Talii.\n"
 "  \\item Możesz sprzedać Graala w Punkcie Handlowym za 30 \\svgunit{gold} \\textit{albo} \\textbf{dwa razy Przeszukać (3)} talię Reliktów.\n"
