--- a/translations/castle_two_knights_defense.tex/pl.po
+++ b/translations/castle_two_knights_defense.tex/pl.po
@@ -387,10 +387,10 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:29
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, \\svgunit{silver} Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling, \\silver\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko, \\svgunit{silver} Siedlisko, Cytadela\n"
+"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko, \\silver\\ Siedlisko, Cytadela\n"
 "\n"
 
 #. type: multicols*
@@ -519,14 +519,14 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item The Glory of Erathia building is unavailable.\n"
-"  \\item Each time you visit a Trading Post, draw the top Cards from the \\svgunit{bronze} bronze, \\svgunit{silver} silver, and \\svgunit{golden} golden neutral enemy Decks.\n"
+"  \\item Each time you visit a Trading Post, draw the top Cards from the \\bronze\\ bronze, \\silver\\ silver, and \\golden\\ golden neutral enemy Decks.\n"
 "  You may recruit any, or all of them by paying their cost.\n"
 "  Shuffle any un-hired ones back into their Decks.\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Budynek Chwała Erathii jest niedostępny.\n"
-"  \\item Za każdym razem, gdy odwiedzasz Punkt Handlowy, dobierz po dwie wierzchnie Karty z talii Neutralnych Jednostek \\svgunit{bronze} brązowych, \\svgunit{silver} srebrnych i \\svgunit{golden} złotych.\n"
+"  \\item Za każdym razem, gdy odwiedzasz Punkt Handlowy, dobierz po dwie wierzchnie Karty z talii Neutralnych Jednostek \\bronze\\ brązowych, \\silver\\ srebrnych i \\golden\\ złotych.\n"
 "  Możesz zrekrutować dowolne liczbę z nich, płacąc ich koszt.\n"
 "  Potasuj wszystkie niezatrudnione jednostki z powrotem do ich Talii.\n"
 "\n"
@@ -535,13 +535,13 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:118
 #, no-wrap
 msgid ""
-"  \\item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \\svgunit{azure} Azure neutral Deck to your army.\n"
+"  \\item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \\azure\\ Azure neutral Deck to your army.\n"
 "  \\item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.\n"
 "  \\item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Po pokonaniu neutralnej armii w Smoczej Utopii, dodaj losowego smoka z neutralnej Talii \\svgunit{azure} do swojej armii.\n"
+"  \\item Po pokonaniu neutralnej armii w Smoczej Utopii, dodaj losowego smoka z neutralnej Talii \\azure\\ do swojej armii.\n"
 "  \\item Wroga armia porusza się zgodnie z normalnymi zasadami ruchu AI, zatrzymując się, by przejąć Osady i Kopalnie, a jej ostatecznym celem jest dotarcie do Smoczej Utopii.\n"
 "  \\item Jeśli wroga armia dotrze do Smoczej Utopii przed tobą, odwróć Grupę Rycerzy Grozy na stronę Garstki i dodaj Grupę Upiornych Smoków.\n"
 "\\end{itemize}\n"
