--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -100,10 +100,10 @@ msgstr ""
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Městské Budovy:} \\svgunit{bronze} Obydlí\n"
+"\\textbf{Městské Budovy:} \\bronze\\ Obydlí\n"
 "\n"
 
 #. type: multicols*
@@ -211,13 +211,13 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
+"  \\item 2 × Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item 2 × Hrstka \\bronze\\ Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -340,10 +340,10 @@ msgid ""
 "  \\item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.\n"
 "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
 "  \\begin{itemize}\n"
-"    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
-"    \\item \\textbf{Normal:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
-"    \\item \\textbf{Hard:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
-"    \\item \\textbf{Impossible:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
+"    \\item \\textbf{Easy:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
+"    \\item \\textbf{Normal:} 1 × \\azure\\, 1 × \\golden\\, 2 × \\silver\\\n"
+"    \\item \\textbf{Hard:} 1 × \\azure\\, 3 × \\golden\\\n"
+"    \\item \\textbf{Impossible:}  2 × \\azure\\, 2 × \\golden\\\n"
 "  \\end{itemize}\n"
 "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
 "  \\begin{itemize}\n"
@@ -358,10 +358,10 @@ msgstr ""
 "  \\item Hráč nesmí použít Kartu Diplomacie, aby přeskočil Souboj na poli Dračí Utopie.\n"
 "  \\item Když se Hrdina přesune na Pole Dračí Utopie, musí bojovat podle zvolené obtížnosti s následujícím počtem Neutrálních Jednotek:\n"
 "  \\begin{itemize}\n"
-"    \\item \\textbf{Lehká:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
-"    \\item \\textbf{Normální:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
-"    \\item \\textbf{Těžká:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
-"    \\item \\textbf{Nemožná:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
+"    \\item \\textbf{Lehká:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
+"    \\item \\textbf{Normální:} 1 × \\azure\\, 1 × \\golden\\, 2 × \\silver\\\n"
+"    \\item \\textbf{Těžká:} 1 × \\azure\\, 3 × \\golden\\\n"
+"    \\item \\textbf{Nemožná:}  2 × \\azure\\, 2 × \\golden\\\n"
 "  \\end{itemize}\n"
 "  \\item Dodržujte tyto kroky, když začne Souboj proti Neutrálním Jednotkám na Poli Dračí Utopie:\n"
 "  \\begin{itemize}\n"
