--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -106,10 +106,10 @@ msgstr ""
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
+"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko\n"
 "\n"
 
 #. type: multicols*
@@ -217,13 +217,13 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
+"  \\item 2 × Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\svgunit{bronze} Jednosek o \\textbf{najwyższym} koszcie rekrutacji\n"
+"  \\item 2 × Garstka \\bronze\\ Jednosek o \\textbf{najwyższym} koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -346,10 +346,10 @@ msgid ""
 "  \\item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.\n"
 "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
 "  \\begin{itemize}\n"
-"    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
-"    \\item \\textbf{Normal:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
-"    \\item \\textbf{Hard:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
-"    \\item \\textbf{Impossible:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
+"    \\item \\textbf{Easy:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
+"    \\item \\textbf{Normal:} 1 × \\azure\\, 1 × \\golden\\, 2 × \\silver\\\n"
+"    \\item \\textbf{Hard:} 1 × \\azure\\, 3 × \\golden\\\n"
+"    \\item \\textbf{Impossible:}  2 × \\azure\\, 2 × \\golden\\\n"
 "  \\end{itemize}\n"
 "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
 "  \\begin{itemize}\n"
@@ -364,10 +364,10 @@ msgstr ""
 "  \\item Gracz nie może użyć Karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
 "  \\item Gdy Bohater przemieszcza się na pole Smoczej Utopii, musi walczyć z następującą liczbą Neutralnych Jednostek w zależności od wybranego poziomu trudności:\n"
 "  \\begin{itemize}\n"
-"    \\item \\textbf{Łatwy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
-"    \\item \\textbf{Normalny:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
-"    \\item \\textbf{Trudny:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
-"    \\item \\textbf{Niemożliwy:} 2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
+"    \\item \\textbf{Łatwy:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
+"    \\item \\textbf{Normalny:} 1 × \\azure\\, 1 × \\golden\\, 2 × \\silver\\\n"
+"    \\item \\textbf{Trudny:} 1 × \\azure\\, 3 × \\golden\\\n"
+"    \\item \\textbf{Niemożliwy:} 2 × \\azure\\, 2 × \\golden\\\n"
 "  \\end{itemize}\n"
 "  \\item Postępuj według poniższych kroków, gdy zaczyna się Walka z Neutralnymi Jednostkami w Smoczej Utopii:\n"
 "  \\begin{itemize}\n"
