--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -328,10 +328,10 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:38
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, \\svgunit{silver} Dwelling\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling, \\silver\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Městské Budovy:} \\svgunit{bronze} Obydlí, \\svgunit{silver} Obydlí\n"
+"\\textbf{Městské Budovy:} \\bronze\\ Obydlí, \\silver\\ Obydlí\n"
 "\n"
 
 #. type: multicols*
