--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -45,7 +45,7 @@ msgstr ""
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
 
@@ -225,8 +225,8 @@ msgstr ""
 #| msgid ""
 #| "\\textbf{Starting Units:}\n"
 #| "\\begin{itemize}\n"
-#| "  \\item A Pack of \\svgunit{bronze} Units of your choice\n"
-#| "  \\item A Few \\svgunit{bronze} Units of your choice\n"
+#| "  \\item A Pack of \\bronze\\ Units of your choice\n"
+#| "  \\item A Few \\bronze\\ Units of your choice\n"
 #| "\\end{itemize}\n"
 #| "\n"
 msgid ""
@@ -238,8 +238,8 @@ msgid ""
 msgstr ""
 "\\textbf{Unités de départ :}\n"
 "\\begin{itemize}\n"
-"  \\item Un groupe d'unité \\svgunit{bronze}  de votre choix.\n"
-"  \\item Quelques unités \\svgunit{bronze} de votre choix.\n"
+"  \\item Un groupe d'unité \\bronze\\  de votre choix.\n"
+"  \\item Quelques unités \\bronze\\ de votre choix.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -762,7 +762,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item \\textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \\svgunit{bronze} neutral Zombies and Skeletons.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \\bronze\\ neutral Zombies and Skeletons.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Play ``Cloak of the Undead King IV'' and ``Cloak of the Undead King VI'' onto the packs of Zombies and Skeletons, respectively.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Remove the AI Might and Magic Deck from the game, the undead fight on their own.}\n"
 "\\end{itemize}\n"
