--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -142,10 +142,10 @@ msgstr ""
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
+"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -232,13 +232,13 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × A Few \\svgunit{bronze} Units with the lowest Recruitment cost\n"
+"  \\item 2 × A Few \\bronze\\ Units with the lowest Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\svgunit{bronze} Jednosek o najniższym koszcie rekrutacji\n"
+"  \\item 2 × Garstka \\bronze\\ Jednosek o najniższym koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -328,7 +328,7 @@ msgid ""
 "      \\item Place the Main Hero when defeated.\n"
 "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
+"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \\azure\\ Deck until a Dragon not associated with any Faction is drawn.\n"
 "    The player may immediately Recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
@@ -345,7 +345,7 @@ msgstr ""
 "      \\item Umieścić Bohatera Głównego, gdy został pokonany.\n"
 "      \\item Tymczasowo przetransportować armię za 8 \\svg{gold}, gdy Losowe Miasto jest atakowane.\n"
 "    \\end{itemize}\n"
-"  \\item Pierwszy gracz, który odwiedzi Smoczą Utopię (po pokonaniu broniących jednostek Błękitnych), ciągnie Karty z Talii Neutralnych \\svgunit{azure} Jednostek do momentu, aż wylosuje Smoka niepowiązanego z żadną frakcją.\n"
+"  \\item Pierwszy gracz, który odwiedzi Smoczą Utopię (po pokonaniu broniących jednostek Błękitnych), ciągnie Karty z Talii Neutralnych \\azure\\ Jednostek do momentu, aż wylosuje Smoka niepowiązanego z żadną frakcją.\n"
 "    Gracz może natychmiastowo zrekrutować tego Smoka za darmo.\n"
 "\\end{itemize}\n"
 "\n"
