--- a/translations/stand_united.tex/pl.po
+++ b/translations/stand_united.tex/pl.po
@@ -176,10 +176,10 @@ msgstr ""
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
+"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
+"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -272,15 +272,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item  1 × A Few cheapest \\svgunit{bronze} Units\n"
-"  \\item  1 × A Few cheapest \\svgunit{silver} Units\n"
+"  \\item  1 × A Few cheapest \\bronze\\ Units\n"
+"  \\item  1 × A Few cheapest \\silver\\ Units\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Garstka najtańszych \\svgunit{bronze} Jednosek\n"
-"  \\item 1 × Garstka najtańszych \\svgunit{silver} Jednosek\n"
+"  \\item 1 × Garstka najtańszych \\bronze\\ Jednosek\n"
+"  \\item 1 × Garstka najtańszych \\silver\\ Jednosek\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -403,25 +403,25 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Remove both Azure Dragons Cards from the \\svgunit{azure} Neutral Units Deck and set one of them aside for later use.\n"
+"  \\item Remove both Azure Dragons Cards from the \\azure\\ Neutral Units Deck and set one of them aside for later use.\n"
 "  \\item Players cannot recruit Secondary Heroes.\n"
 "  \\item Level VII Combat cannot be skipped by Diplomacy or any other means.\n"
 "  \\item Players can use their Build Token to initiate trade with one other chosen player. The two players can freely exchange Resources and can exchange Artifacts or Spells from their hand as if their Heroes were adjacent.\n"
 "  \\item During the game, players assemble a shared army. Every player can field Units from the shared army during Combat (shared Units' \\svg{map} abilities can be activated each Round by only one player).  % no-check-caps\n"
-"  \\item Upon flagging an Obelisk, discard the top Card from each Neutral Units Deck except \\svgunit{azure}. You can recruit one of these Units. Units recruited this way go into the shared army.\n"
-"  \\item During Combat at the Dragon Utopia, one of the Neutral \\svgunit{azure} Units is always the Azure Dragon and the Neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.\n"
+"  \\item Upon flagging an Obelisk, discard the top Card from each Neutral Units Deck except \\azure\\. You can recruit one of these Units. Units recruited this way go into the shared army.\n"
+"  \\item During Combat at the Dragon Utopia, one of the Neutral \\azure\\ Units is always the Azure Dragon and the Neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.\n"
 "  \\item After winning Combat at the Dragon Utopia, no Faction Cube is placed on the Dragon Utopia Field. The victorious player puts one of their surviving Faction Units into the shared army and can redistribute their remaining Resources among other players, after which that player gets removed from the game.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Usuń obie karty Błękitnych Smoków z talii Neutralnych \\svgunit{azure} Jednostek i odłóż jedną z nich na bok.\n"
+"  \\item Usuń obie karty Błękitnych Smoków z talii Neutralnych \\azure\\ Jednostek i odłóż jedną z nich na bok.\n"
 "  \\item Gracze nie mogą rekrutować Bohaterów Pomocniczych.\n"
 "  \\item Walki Poziomu VII nie można pominąć przez Dyplomację ani w inny sposób.\n"
 "  \\item Gracze mogą użyć swojego Żetonu Budowy, aby handlować z jednym wybranym graczem. Obaj gracze mogą swobodnie wymieniać się Zasobami oraz wymieniać Artefakty lub Zaklęcia z ręki, tak jakby ich Bohaterowie stali obok siebie.\n"
 "  \\item Podczas gry gracze tworzą wspólną armię. Każdy gracz może wystawiać Jednostki ze wspólnej armii podczas Walki (zdolności \\svg{map} wspólnych Jednostek mogą być używane w każdej Rundzie tylko przez jednego gracza).\n"
-"  \\item Po oflagowaniu Obelisku, odrzuć wierzchnią Kartę z każdej talii Neutralnych Jednostek z wyjątkiem \\svgunit{azure}. Możesz zrekrutować jedną z tych Jednostek. Jednostki zrekrutowane w ten sposób trafiają do wspólnej armii.\n"
-"  \\item Podczas Walki w Smoczej Utopii jedna z Neutralnych \\svgunit{azure} Jednostek zawsze jest Błękitnym Smokiem, a Neutralna armia używa Talii AI. Przetasuj Talię AI i Talię Zaklęć AI po zakończeniu Walki.\n"
+"  \\item Po oflagowaniu Obelisku, odrzuć wierzchnią Kartę z każdej talii Neutralnych Jednostek z wyjątkiem \\azure\\. Możesz zrekrutować jedną z tych Jednostek. Jednostki zrekrutowane w ten sposób trafiają do wspólnej armii.\n"
+"  \\item Podczas Walki w Smoczej Utopii jedna z Neutralnych \\azure\\ Jednostek zawsze jest Błękitnym Smokiem, a Neutralna armia używa Talii AI. Przetasuj Talię AI i Talię Zaklęć AI po zakończeniu Walki.\n"
 "  \\item Po wygraniu Walki w Smoczej Utopii nie umieszczaj na polu Kostki Frakcji. Zwycięski gracz umieszcza jedną ze swoich ocalałych Jednostek Frakcji we wspólnej armii i może rozdzielić pozostałe Zasoby między innych graczy, po czym ten gracz zostaje usunięty z gry.\n"
 "\\end{itemize}\n"
 "\n"
